# substrait-python

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .releaserc.json  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  SubstraitType.g4  adbc_example.py  buf.gen.yaml  buf.yaml  check_codegen.sh  check_substrait_package_versions.sh  environment.yml  gen_proto.sh  myoutfile.splan  pyproject.toml  setup.py  update.sh  update_cpp.sh  update_submodule.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  build_test_release.yml  codegen-check.yml  example.yml  pr_title.yml  release.yml  ruff.yml  semantic-release.yml  test.yml  version-checks.yml
ci/release/: run.sh
examples/: adbc_example.py  api_example.py  builder_example.py  dataframe_example.py  duckdb_example.py  narwhals_example.py  pyarrow_example.py
scripts/: setup_antlr.sh  update_proto.sh
src/pysubstrait/: __init__.py
src/pysubstrait/proto/: __init__.pyi
src/pysubstrait/proto/pysubstrait/: algebra_pb2.py  capabilities_pb2.py  function_pb2.py  plan_pb2.py
src/substrait/: __init__.py  api.py  bimap.py  derivation_expression.py  dtypes.py  expr.py  extended_expression.py  extension_registry.py  frame.py  function_registry.py  functions.py  json.py  proto.py  simple_extension_utils.py  type_inference.py  utils.py  version.py
src/substrait/builders/: display.py  extended_expression.py  plan.py  type.py
src/substrait/dataframe/: __init__.py  dataframe.py  expression.py  functions.py  utils.py
src/substrait/extension_registry/: __init__.py  exceptions.py  function_entry.py  registry.py  signature_checker_helpers.py
src/substrait/narwhals/: __init__.py  dataframe.py  expression.py
src/substrait/planloader/: planloader.cpp  planloader.py
src/substrait/proto/: __init__.py  parameterized_types_pb2.py  plan_pb2.py
src/substrait/proto/pysubstrait/: extended_expression_pb2.py  parameterized_types_pb2.py  type_expressions_pb2.py  type_pb2.py
src/substrait/proto/pysubstrait/extensions/: extensions_pb2.py
src/substrait/sql/: __init__.py  __main__.py  extended_expression.py  functions_catalog.py  sql_to_substrait.py  utils.py
src/substrait/utils/: __init__.py  display.py
tests/: test_bimap.py  test_derivation_expression.py  test_extended_expression.py  test_extension_registry.py  test_function_registry.py  test_json.py  test_literal_type_inference.py  test_planloader.py  test_proto.py  test_simple_extension_utils.py  test_type_inference.py  test_uri_urn_migration.py  test_utils.py  tpch-plan01.json
tests/api/: test_dtypes.py  test_expr.py  test_frame.py  test_functions.py  test_literals.py
tests/builders/: test_types.py
tests/builders/extended_expression/: test_aggregate_function.py  test_cast.py  test_column.py  test_if_then.py  test_literal.py  test_multi_or_list.py  test_scalar_function.py  test_singular_or_list.py  test_switch.py  test_window_function.py
tests/builders/plan/: test_aggregate.py  test_consistent_partition_window.py  test_cross.py  test_fetch.py  test_filter.py  test_join.py  test_plan_uri_urn_output.py  test_project.py  test_read.py  test_set.py  test_sort.py  test_write.py
tests/dataframe/: test_df_project.py
tests/extended_expression/: test_column.py  test_scalar_function.py
tests/extension_registry/: conftest.py  test_function_types.py  test_registry_lookup.py  test_signature_matching.py  test_type_coverage.py  test_urn_uri_mapping.py  test_validation.py
tests/narwhals/: test_df_project.py
tests/sql/: test_sql_to_substrait.py
