[project]
name = "substrait"
description = "A python package for Substrait."
authors = [{name = "Substrait contributors", email = "substrait@googlegroups.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "protobuf >=5,<7",
    "substrait-protobuf==0.79.0",
]
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "src/substrait/_version.py"

[project.optional-dependencies]
extensions = ["antlr4-python3-runtime", "substrait-antlr==0.79.0", "pyyaml"]
sql = ["sqloxide; python_version < '3.14'", "deepdiff"]

[dependency-groups]
dev = ["pytest >= 7.0.0", "antlr4-python3-runtime", "substrait-antlr==0.79.0", "pyyaml", "sqloxide; python_version < '3.14'", "deepdiff", "duckdb<=1.2.2; python_version < '3.14'", "datafusion"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"

[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=6.2.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
respect-gitignore = true
# should target minimum supported version
target-version = "py310"
# never autoformat upstream or generated code
exclude = ["third_party/"]
lint.extend-select = ["I"]


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64", "linux-aarch64"]

[tool.pixi.environments]
dev = { features = ["dev"], solve-group = "default" }
extensions = { features = ["extensions"], solve-group = "default" }
sql = { features = ["sql"], solve-group = "default" }

[tool.pixi.tasks]
format = "ruff format"
lint = "ruff check"
lint_fix = "ruff check --fix"

[tool.pixi.dependencies]
ruff = ">=0.14.10,<0.15"
